package co.edu.uniquindio.carrouq.model;

public abstract class Combustible {
}