package co.edu.uniquindio.carrouq.model;

public class Empleado extends Usuario {

	/**
	 * 
	 * @param nombre
	 * @param id
	 */
	public Empleado(String nombre, String id) {
		super(nombre, id);
	}
}