package co.edu.uniquindio.carrouq.model;

public enum TipoCambio {
	MANUAL, AUTOMATICO
}