package co.edu.uniquindio.carrouq.model;

public class Administrador extends Empleado {

	/**
	 * Este es el metodo constructor de la clase Administrador
	 * 
	 * @param nombre
	 * @param id
	 */
	public Administrador(String nombre, String id) {
		super(nombre, id);

	}

	/**
	 * Este metodo registra un empleado
	 */
	public void registrarEmpleado() {

	}

	/**
	 * Este metodo elimina un empleado
	 */
	public void eliminarEmpleado() {

	}

	/**
	 * Este metodo actualiza un empleado
	 */
	public void actualizarEmpleado() {

	}

	/**
	 * Este metodo bloquea aun empleado
	 */
	public void bloquearEmpleado() {

	}

	/**
	 * Este metodo genera un reporte
	 */
	public void generarReporte() {

	}

	/**
	 * Este metodo es la que recupera contraseñas
	 */
	public void recuperarContrasena() {

	}

}
