package co.edu.uniquindio.concesionarioCarros.model;

public class Moto extends Vehiculo {

    public Moto(String placa, String marca, String modelo, Double cilindraje, Double velocidadMaxima,
            EstadoVehiculo estado, TipoCambio tipo) {
        super(placa, marca, modelo, cilindraje, velocidadMaxima, estado, tipo);
    }

}
